# buscador-de-cnpj

./: Makefile  README.md  pyproject.toml
scripts/: validate.py
